# change-post

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/app/: config.py  main.py
src/app/api/: analytics.py  api_keys.py  auth.py  changelog.py  dashboard.py  deps.py  health.py  posts.py  programmatic.py  projects.py  subscribers.py  widget.py  widget_page.py
src/app/models/: __init__.py  api_key.py  post.py  project.py  subscriber.py  user.py
src/app/schemas/: auth.py  post.py  project.py
src/app/services/: api_key.py  auth.py  email.py  post.py  project.py  subscriber.py
src/app/templates/layouts/: auth.html  base.html  dashboard.html
src/app/templates/pages/: dashboard.html  error.html  login.html  register.html
src/app/templates/pages/analytics/: dashboard.html
src/app/templates/pages/api_keys/: list.html
src/app/templates/pages/changelog/: post.html  public.html  subscribe_result.html  unsubscribe.html
src/app/templates/pages/posts/: create.html  detail.html  edit.html  list.html
src/app/templates/pages/projects/: create.html  detail.html  edit.html  list.html
src/app/templates/pages/subscribers/: list.html
src/app/templates/pages/widget/: embed.html
tests/: conftest.py  test_analytics.py  test_api_keys.py  test_auth.py  test_changelog.py  test_health.py  test_posts.py  test_programmatic_api.py  test_projects.py  test_subscribers.py  test_widget.py
